<?xml version="1.0" encoding="utf-8"?>

<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	
	<data>
		<variable
			name="viewModel"
			type="com.dev.meeting.ui.auth.AuthViewModel"
			/>
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/authContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:paddingBottomSystemWindowInsets="@{true}"
		>



		<ImageView
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:scaleType="centerCrop"
			android:src="@drawable/background"
			
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:contentDescription="@null"
			/>


		<com.google.android.material.textview.MaterialTextView android:id="@+id/tvAuthSlogan_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:maxLines="2"
			android:text="@string/auth_slogan1"
			android:textAppearance="?textAppearanceHeadline4"
			
			app:paddingTopSystemWindowInsets="@{true}"

			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.1"
			/>
		


		<com.google.android.material.button.MaterialButton
			android:id="@+id/btnFacebookLoginDelegate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="16dp"

			android:text="@string/btn_log_in_with_google"
			android:textAllCaps="false"
			android:textColor="@color/white"

			app:backgroundTint="@color/myFacebookColor"
			app:cornerRadius="8dp"
			app:iconTint="@color/white"
			app:rippleColor="@color/myFacebookColor"

			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tvAuthSlogan_1"
			app:layout_constraintVertical_bias="0.8"
			/>

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/tvOpenPolicies"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLines="2"

			android:text="@string/text_i_agree_privacy_policy"
			android:textAlignment="center"
			android:textAppearance="?textAppearanceCaption"

			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/btnFacebookLoginDelegate"

			/>

		
		<include android:id="@+id/loadingView"
			layout="@layout/loading"
			android:layout_width="0dp"
			android:layout_height="0dp"
			
			app:invisibleIf="@{!viewModel.showLoading}"
			
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			/>
		
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>